# particle_simulation_cuda

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  test  test_cal
.cache/clangd/index/: cgltf.h.04BAA6983C5FE508.idx  config.h.54E016E724BCD7B0.idx  context.c.F8673C61130BD6C8.idx  dr_mp3.h.B934E7F2A1DFCF73.idx  dr_wav.h.67F9D52CF2D67354.idx  egl_context.c.58E18CB19D03E64D.idx  glad.h.315EEA66AFF889E5.idx  glfw3.h.AAE8AF30BA86DB1D.idx  glfw3native.h.E54673A2986A8FF7.idx  glx_context.c.AE044F5ADD73EE05.idx  init.c.EB4215179A676ABC.idx  input.c.6238EF6D78D1B875.idx  internal.h.1C407D473079E752.idx  jar_mod.h.849D07774DF98561.idx  jar_xm.h.6E6D35B5A7D923AA.idx  linux_joystick.c.8CE3EDCF495A00AA.idx  linux_joystick.h.21F6F52BE0384A11.idx  m3d.h.E0CA9D6D98EEE864.idx  main.cpp.564F1E01C8E046F9.idx  mappings.h.41E05A6CC76C60B6.idx  miniaudio.h.B71A1B411D029A7F.idx  monitor.c.2DAFA7563C1A8A04.idx  msf_gif.h.4AFDB60EEEC9572C.idx  null_init.c.57363A955CB25A36.idx  null_joystick.c.D56A89C9D7DCFED5.idx  null_joystick.h.9501DF11A884B269.idx  null_monitor.c.F5E49B3830EA0425.idx  null_platform.h.BC75B6D99E1E89B3.idx  null_window.c.72008E163103517A.idx  osmesa_context.c.C7323EFDDD1B4019.idx  par_shapes.h.DFD52E99F845D031.idx  platform.c.8010B60A7633AE44.idx  platform.h.B9AB26D0C39E1249.idx  posix_module.c.578F38B64D145E06.idx  posix_poll.c.0D5886458FFC6EDF.idx  posix_poll.h.E2C501763217811F.idx  posix_thread.c.89BD326C2D2B9423.idx  posix_thread.h.76E9E5FAC4F04C37.idx  posix_time.c.331A442BB559C892.idx  (+41 more)
src/: main.cpp  test.cu  test.h
